k8s/gke/production/service.yml
apiVersion: v1
kind: Service

metadata:
  name: my-app-service
  namespace: production
  annotations:
    cloud.google.com/neg: '{"ingress": true}'

spec:
  selector:
    app: my-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: ClusterIP
